# roboschool2018

./: .gitignore  README.md
car_description/launch/: view_model.launch
car_description/rviz/: robot_model.rviz
car_description/urdf/: camera.xacro  car.xacro  wheel.xacro
car_gazebo/: CMakeLists.txt
car_gazebo/launch/: track.launch
car_gazebo/models/traffic_light/: traffic_light.xacro
car_gazebo/scripts/: light_controller.py
car_gazebo/src/CarPlugin/: CarPlugin.cpp
car_gazebo/worlds/: track.world
car_hackathon/: CMakeLists.txt
car_hackathon/scripts/: line_detection_example.py
car_hackathon/src/: line_follower.cpp
roboschool_common/scripts/: twist_to_motors.py
